Добавлена минимизация в код

--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
         <div class="form-group">
             <input class="form-input form-input-1" id="text" type="text" name="login">
             <label class="form-label" for="text">Ваше имя:</label>
-            <label class="form-label-inside" for="text" type="text">Представьтесь пожалуйста</label>
+            <label class="form-label-inside" for="text">Представьтесь пожалуйста</label>
         </div>
         <div class="form-group">
             <input class="form-input form-input-2" id="email-answer" type="email" name="email">
             <label class="form-label" for="email-answer">Ваш e-mail:</label>
-            <label class="form-label-inside" for="text" type="text">Для отправки ответа</label>
+            <label class="form-label-inside" for="text">Для отправки ответа</label>
         </div>
         <div class="form-group form-input-3">
             <textarea class="form-input" name="comment" id="comment"></textarea>
             <label class="form-label" for="comment">Текст письма:</label>
-            <label class="form-label-inside" for="text" type="text">В свободной форме</label>
+            <label class="form-label-inside" for="text">В свободной форме</label>
         </div>
         <button class="button red" type="submit">Отправить</button>
     </form>
     <button class="close-button" type="button">Закрыть</button>
 </section>
-<script src="js/script.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
